--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -5,6 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="10dp"
+    android:layout_marginTop="5dp"
     android:layout_marginBottom="10dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/bg_round"
@@ -13,133 +14,97 @@
 
     <LinearLayout
         android:id="@+id/content_container"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="true"
-        android:clickable="true"
-        android:background="?android:attr/selectableItemBackground"
-        app:elevation="10dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/post_title"
+            android:text="标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            android:paddingBottom="2dp" />
+
+        <RelativeLayout
+            android:id="@+id/content_sub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingBottom="10dp"
-                android:orientation="vertical"
-                >
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/post_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="2"
-                        android:textSize="15sp"
-                        android:paddingRight="20dp"
-                        android:layout_alignParentLeft="true"
-                        android:text="内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题内容标题"/>
-
-                    <ImageView
-                        android:id="@+id/operations"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_more_vert"/>
-
-                </RelativeLayout>
-
-
-
-                <TextView
-                    android:id="@+id/post_summay"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:textSize="13sp"
-                    android:text="@string/test_summary"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <RelativeLayout
-                        android:id="@+id/feed_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <ImageView
-                            android:id="@+id/rss_icon"
-                            android:layout_width="21dp"
-                            android:visibility="gone"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/ic_rss_feed_grey_24dp"/>
-                        <TextView
-                            android:id="@+id/rss_name"
-                            android:layout_toRightOf="@id/rss_icon"
-                            android:layout_centerVertical="true"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="13sp"
-
-                            android:text="人民一学的bilibili动态"/>
-                    </RelativeLayout>
-
-                    <TextView
-                        android:id="@+id/post_time"
-                        android:layout_marginLeft="15dp"
-                        android:layout_toRightOf="@id/feed_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="13sp"
-
-                        android:text="下午6:31"/>
-
-                    <TextView
-                        android:id="@+id/favorite"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="已收藏"
-                        android:textSize="13sp"
-
-                        android:layout_alignParentRight="true"
-                        />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_height="1.5px"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:background="@color/divider"/>
-
-        </LinearLayout>
-
-        <ImageView
+            <ImageView
             android:id="@+id/post_pic"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_focus_launcher_round"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
+            android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
-            />
-    </LinearLayout>
+            android:src="@mipmap/ic_focus_launcher_round" />
 
+            <TextView
+                android:id="@+id/post_summay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/post_pic"
+                android:layout_marginLeft="10dp"
+                android:maxLines="4"
+                android:text="@string/test_summary"
+                android:textSize="16sp" />
+
+        </RelativeLayout>>
+
+        <RelativeLayout
+            android:id="@+id/content_sub2"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/post_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/post_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:text="2012-12-23 12:22:12" />
+
+
+            <ImageView
+                android:id="@+id/operations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_more_vert" />
+
+            <TextView
+                android:id="@+id/favorite"
+                android:text="已收藏"
+                android:layout_width="58sp"
+                android:layout_height="wrap_content"
+                android:drawablePadding="2dp"
+                android:gravity="center"
+                android:layout_toLeftOf="@id/operations" />
+
+            <TextView
+                android:id="@+id/rss_name"
+                android:text="人民一学的bilibili动态"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="2dp"
+                android:gravity="center"
+                android:layout_toLeftOf="@id/favorite" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
 
