--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--日间模式-->
 <resources>
-    <color name="colorPrimary">#fafafa</color>
-    <color name="colorPrimaryDark">#fafafa</color>
+    <color name="colorPrimary">#eeeeee</color>
+    <color name="colorPrimaryDark">#eeeeee</color>
     <color name="colorAccent">#000000</color>
 
     <!--基准色-->
@@ -21,11 +21,11 @@
     <!--组件-->
     <color name="loading_bg">#e0e0e0</color>
 
-    <color name="text_unread">#CB000000</color> <!-- 54% -->
-    <color name="text_unread_content">#616161</color> <!-- 54% -->
+    <color name="text_unread">#005598</color> <!-- 54% -->
+    <color name="text_unread_content">#CB000000</color> <!-- 54% -->
 
     <color name="text_read">#757575</color> <!-- 54% -->
-    <color name="text_read_content">#9e9e9e</color>
+    <color name="text_read_content">#757575</color>
 
     <color name="divider">#eeeeee</color>
     <color name="divider_dark">#616161</color>
