修改样式：列表标题栏加粗、正文字体颜色加深

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -27,6 +27,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:paddingBottom="2dp" />
 
         <RelativeLayout
