--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:text="2012-12-23 12:22:12" />
+                android:text="12:22" />
 
 
             <ImageView
@@ -102,6 +102,14 @@
                 android:drawablePadding="2dp"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/favorite" />
+
+            <ImageView
+                android:id="@+id/rss_icon"
+                android:layout_width="18sp"
+                android:layout_height="18sp"
+                android:layout_alignBottom="@id/rss_name"
+                android:src="@drawable/ic_rss_feed_grey_24dp"
+                android:layout_toLeftOf="@id/rss_name"/>
 
         </RelativeLayout>
 
