--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -61,12 +61,12 @@
 
         <RelativeLayout
             android:id="@+id/content_sub2"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/post_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/post_title"
+            android:layout_marginTop="10dp"
+            android:background="#F8F8F8"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/post_time"
@@ -74,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
                 android:text="12:22" />
 
 
@@ -87,29 +88,29 @@
 
             <TextView
                 android:id="@+id/favorite"
-                android:text="已收藏"
                 android:layout_width="58sp"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/operations"
                 android:drawablePadding="2dp"
                 android:gravity="center"
-                android:layout_toLeftOf="@id/operations" />
+                android:text="已收藏" />
 
             <TextView
                 android:id="@+id/rss_name"
-                android:text="人民一学的bilibili动态"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/favorite"
                 android:drawablePadding="2dp"
                 android:gravity="center"
-                android:layout_toLeftOf="@id/favorite" />
+                android:text="人民一学的bilibili动态" />
 
             <ImageView
                 android:id="@+id/rss_icon"
                 android:layout_width="18sp"
                 android:layout_height="18sp"
                 android:layout_alignBottom="@id/rss_name"
-                android:src="@drawable/ic_rss_feed_grey_24dp"
-                android:layout_toLeftOf="@id/rss_name"/>
+                android:layout_toLeftOf="@id/rss_name"
+                android:src="@drawable/ic_rss_feed_grey_24dp" />
 
         </RelativeLayout>
 
