修复批量删除文章的性能问题，并增加插入测试文章的按钮

--- a/app/src/main/res/xml/pref_data_setting.xml
+++ b/app/src/main/res/xml/pref_data_setting.xml
@@ -52,4 +52,9 @@
         android:title="@string/pref_title_recover"
         android:summary="@string/pref_summary_recover"/>
 
+    <androidx.preference.Preference
+        android:key="@string/pref_key_test_insert"
+        android:title="@string/pref_title_test_insert"
+        android:summary="@string/pref_summary_test_insert"/>
+
 </androidx.preference.PreferenceScreen>
